syntax = "proto3";

option go_package = "github.com/btechlabs/lms/gen/pb/common";

package common;

enum EventType {
  NONE = 0;
  // Financial Product Events
  FINANCIAL_PRODUCT_CREATED = 1;
  FINANCIAL_PRODUCT_UPDATED = 2;
  FINANCIAL_PRODUCT_DELETED = 3;
  FINANCIAL_PRODUCT_IN_APPROVAL = 4;
  FINANCIAL_PRODUCT_APPROVED = 5;
  FINANCIAL_PRODUCT_REJECTED = 6;
  FINANCIAL_PRODUCT_PUBLISHED = 7;
  FINANCIAL_PRODUCT_UNPUBLISHED = 8;
  // Financial Account Events
  FINANCIAL_ACCOUNT_CREATED = 21;
  FINANCIAL_ACCOUNT_SUSPENDED = 22;
  FINANCIAL_ACCOUNT_ACTIVATED = 23;
  FINANCIAL_ACCOUNT_CLOSED = 24;
  // Loan Account Events
  LOAN_ACCOUNT_CREATED = 41;
  LOAN_ACCOUNT_ACTIVATED = 42;
  LOAN_ACCOUNT_CANCELED = 43;
  LOAN_ACCOUNT_EARLY_SETTLEMENT = 44;
  LOAN_ACCOUNT_INTEREST_REVENUE_RECOGNIZED = 45;
  LOAN_ACCOUNT_PAYMENT_BOOKED = 46;
  // Payment Events
  PAYMENT_BOOKED = 61;
}